More progress on OpenAPI file
