# openapi.yaml
@@ -36,7 +36,6 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/UserCredentials"
-
       responses:
         "200":
           description: "Logged in successfully"
@@ -64,6 +63,8 @@ paths:
       summary: "Logout"
       tags:
         - "General"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "Successfully logged out (token deleted server side)"
@@ -82,6 +83,8 @@ paths:
       summary: "Get all flashcard sets"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "A list of flashcard sets"
@@ -102,6 +105,8 @@ paths:
       description: "There can only be 20 new flashcard sets created per by non-admin users unless changed by an admin"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -145,6 +150,8 @@ paths:
       summary: "Get a flashcard set by ID"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "The flashcard set"
@@ -169,6 +176,8 @@ paths:
       description: "Users can only update their own sets unless they are an admin"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -211,6 +220,8 @@ paths:
       description: "Users can only delete their own sets unless they are an admin"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       responses:
         "204":
           description: "The flashcard set was deleted"
@@ -244,6 +255,8 @@ paths:
       summary: "Review a flashcard set, by the current user"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -256,7 +269,7 @@ paths:
                   example: "I love this set!"
       responses:
         "201":
-          description: "The created comment"
+          description: "The created review"
           content:
             application/json:
               schema:
@@ -285,6 +298,53 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /sets/{setId}/review/{reviewId}:
+    parameters:
+      - name: setId
+        in: path
+        required: true
+        description: "The ID of the flashcard set"
+        schema:
+          type: "string"
+      - name: reviewId
+        in: path
+        required: true
+        description: "The ID of the flashcard set review"
+        schema:
+          type: "string"
+    delete:
+      summary: "Delete a flashcard set review"
+      tags:
+        - "FlashCard Sets"
+      security:
+        - BearerAuth: []
+      responses:
+        "204":
+          description: "The review was deleted"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "403":
+          description: "Attempted to delete another user's review as a non-admin"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: "The flashcard set was not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: "The server is unable to process the request due to invalid or missing data"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /sets/{setId}/cards:
     parameters:
       - name: setId
@@ -297,6 +357,8 @@ paths:
       summary: "Get all flashcards in a set"
       tags:
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       parameters:
         - name: shuffle
           in: query
@@ -330,6 +392,8 @@ paths:
       summary: "Get all users"
       tags:
         - "Users"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "A list of users"
@@ -391,6 +455,8 @@ paths:
       summary: "Get a user by ID"
       tags:
         - "Users"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "The user"
@@ -414,6 +480,8 @@ paths:
       summary: "Update a user's password by ID"
       tags:
         - "Users"
+      security:
+        - BearerAuth: []
       description: "A user can only update their own password"
       requestBody:
         required: true
@@ -461,6 +529,8 @@ paths:
       summary: "Delete a user by ID"
       tags:
         - "Users"
+      security:
+        - BearerAuth: []
       description: "A user can only delete their own account unless they are an admin. When deleting their own account, they must provide a password"
       requestBody:
         required: false
@@ -500,10 +570,19 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
   /users/{userId}/admin:
+    parameters:
+    - name: userId
+      in: path
+      required: true
+      description: "The ID of the user"
+      schema:
+        type: "string"
     put:
       summary: "Update admin status of user by ID"
       tags:
         - "Users"
+      security:
+        - BearerAuth: []
       description: "Admin status only editable if the current user is an admin, but an admin cannot remove their own admin status"
       requestBody:
         required: true
@@ -545,14 +624,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /users/{userID}/sets:
+  /users/{userId}/sets:
     get:
       summary: "Get all flashcard sets created by a user"
       tags:
         - "Users"
         - "FlashCard Sets"
+      security:
+        - BearerAuth: []
       parameters:
-        - name: userID
+        - name: userId
           in: path
           required: true
           description: "The ID of the user"
@@ -567,17 +648,25 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/FlashcardSet"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "404":
           description: "The user was not found"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /users/{userID}/collections:
+  /collections:
     get:
-      summary: "Get all flashcard set collections created by a user"
+      summary: "Get all flashcard set collections"
       tags:
         - "Collections"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "A list of flashcard set collections"
@@ -595,15 +684,67 @@ paths:
                         description: "The user's comment on the set"
                       set:
                         $ref: "#/components/schemas/FlashcardSet"
-  /users/{userID}/collections/{collectionID}:
-    parameters:
-      - name: userID
-        in: path
+                      user:
+                        $ref: "#/components/schemas/User"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      summary: "Create a new flashcard set collection"
+      tags:
+        - "Collections"
+      security:
+        - BearerAuth: []
+      requestBody:
         required: true
-        description: "The ID of the user"
-        schema:
-          type: "string"
-      - name: collectionID
+        content:
+          application/json:
+            schema:
+              type: "array"
+              items:
+                type: "object"
+                properties:
+                  comment:
+                    type: "string"
+                    example: "I love this set!"
+                  setID:
+                    type: "number"
+                    example: 1
+      responses:
+        "201":
+          description: "The created flashcard set collection"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "object"
+                  properties:
+                    comment:
+                      type: "string"
+                      description: "The user's comment on the set"
+                    set:
+                      $ref: "#/components/schemas/FlashcardSet"
+                    user:
+                      $ref: "#/components/schemas/User"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: "The flashcard set was not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /collections/{collectionId}:
+    parameters:
+      - name: collectionId
         in: path
         required: true
         description: "The ID of the collection"
@@ -613,6 +754,8 @@ paths:
       summary: "Get a flashcard set collection by ID"
       tags:
         - "Collections"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "The flashcard set collection"
@@ -630,6 +773,12 @@ paths:
                       $ref: "#/components/schemas/FlashcardSet"
                     user:
                       $ref: "#/components/schemas/User"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "404":
           description: "The flashcard set collection was not found"
           content:
@@ -640,6 +789,8 @@ paths:
       summary: "Update a flashcard set collection by ID"
       tags:
         - "Collections"
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -670,14 +821,14 @@ paths:
                     $ref: "#/components/schemas/FlashcardSet"
                   user:
                     $ref: "#/components/schemas/User"
-        "404":
-          description: "The flashcard set collection was not found"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "401":
-          description: "You are not authorized ('logged in') to update this collection"
+        "404":
+          description: "The flashcard set collection was not found"
           content:
             application/json:
               schema:
@@ -692,17 +843,19 @@ paths:
       summary: "Delete a flashcard set collection by ID"
       tags:
         - "Collections"
+      security:
+        - BearerAuth: []
       responses:
         "204":
           description: "The flashcard set collection was deleted"
-        "404":
-          description: "The flashcard set collection was not found"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "401":
-          description: "You are not authorized ('logged in') to delete this collection"
+        "404":
+          description: "The flashcard set collection was not found"
           content:
             application/json:
               schema:
@@ -713,11 +866,150 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /collections:
-    get:
-      summary: "Get all flashcard set collections"
+  /collections/{collectionId}/review:
+    parameters:
+      - name: collectionId
+        in: path
+        required: true
+        description: "The ID of the flashcard set"
+        schema:
+          type: "string"
+    post:
+      summary: "Review a flashcard set collection, by the current user"
       tags:
         - "Collections"
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                comment:
+                  type: "string"
+                  example: "I love this set!"
+      responses:
+        "201":
+          description: "The created review"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SetReview"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: "The flashcard set was not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "409":
+          description: "User has already reviewed the set"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: "The server is unable to process the request due to invalid or missing data"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /collections/{collectionId}/review/{reviewId}:
+    parameters:
+      - name: collectionId
+        in: path
+        required: true
+        description: "The ID of the flashcard set collection"
+        schema:
+          type: "string"
+      - name: reviewId
+        in: path
+        required: true
+        description: "The ID of the flashcard set collection review"
+        schema:
+          type: "string"
+    delete:
+      summary: "Delete a flashcard set collection review"
+      tags:
+        - "Collections"
+      security:
+        - BearerAuth: []
+      responses:
+        "204":
+          description: "The review was deleted"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "403":
+          description: "Attempted to delete another user's review as a non-admin"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: "The flashcard set collection was not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: "The server is unable to process the request due to invalid or missing data"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /collections/random:
+    get:
+      summary: "Redirect to a random flashcard set collection"
+      tags:
+        - "Collections"
+      security:
+        - BearerAuth: []
+      responses:
+        "302":
+          description: "Redirect to a random flashcard set collection"
+          headers:
+            Location:
+              schema:
+                type: "string"
+                example: "/users/1/collections/1"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: "There are no flashcard set collections"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /users/{userId}/collections:
+    parameters:
+    - name: userId
+      in: path
+      required: true
+      description: "The ID of the user"
+      schema:
+        type: "string"
+    get:
+      summary: "Get all flashcard set collections created by a user"
+      tags:
+        - "Collections"
+        - "Users"
+      security:
+        - BearerAuth: []
       responses:
         "200":
           description: "A list of flashcard set collections"
@@ -735,66 +1027,8 @@ paths:
                         description: "The user's comment on the set"
                       set:
                         $ref: "#/components/schemas/FlashcardSet"
-                      user:
-                        $ref: "#/components/schemas/User"
-    post:
-      summary: "Create a new flashcard set collection"
-      tags:
-        - "Collections"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: "array"
-              items:
-                type: "object"
-                properties:
-                  comment:
-                    type: "string"
-                    example: "I love this set!"
-                  setID:
-                    type: "number"
-                    example: 1
-
-      responses:
-        "201":
-          description: "The created flashcard set collection"
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: "object"
-                  properties:
-                    comment:
-                      type: "string"
-                      description: "The user's comment on the set"
-                    set:
-                      $ref: "#/components/schemas/FlashcardSet"
-                    user:
-                      $ref: "#/components/schemas/User"
-        "404":
-          description: "The flashcard set was not found"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /collections/random:
-    get:
-      summary: "Redirect to a random flashcard set collection"
-      tags:
-        - "Collections"
-      responses:
-        "302":
-          description: "Redirect to a random flashcard set collection"
-          headers:
-            Location:
-              schema:
-                type: "string"
-                example: "/users/1/collections/1"
-        "404":
-          description: "There are no flashcard set collections"
+        "401":
+          description: "Unauthorised: Missing or invalid authentication credentials"
           content:
             application/json:
               schema:
@@ -1081,3 +1315,7 @@ components:
           format: date-time
           example: "2025-01-11T04:07:24.527Z"
           description: "Timestamp indicating when the token will expire"
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
